# employee-sentiment

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-cd.yml
data/: sample_feedback.csv
docs/: architecture.md
infrastructure/terraform/: main.tf  variables.tf
lambda/: handler.py
quicksight/: README.md
scripts/: deploy.py  package_lambda.py
src/: __init__.py
src/lambda_functions/: __init__.py
src/utils/: __init__.py  aws_clients.py  data_processing.py
terraform/: iam.tf  outputs.tf
tests/unit/: test_aws_clients.py  test_data_processing.py  test_sentiment_analyzer.py
